Modernize to uv: migrate from pip/requirements to uv package manager
- Add dependency-groups to pyproject.toml for dev dependencies
- Generate uv.lock file for reproducible builds
- Update all documentation (README, CONTRIBUTING, INSTALL, QUICKSTART) with uv commands
- Update CI workflow to use uv
- Mark requirements.txt files as legacy
- Add MIGRATION_UV.md migration guide
- Add build and twine to dev dependencies
- Fix ruff configuration to use new lint section format

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,8 @@
+# LEGACY FILE - This file is kept for reference only.
+# The project now uses uv and pyproject.toml as the single source of truth.
+# Use `uv sync --dev` instead of `pip install -r requirements-dev.txt`
+# See MIGRATION_UV.md for migration instructions.
+
 # Development dependencies
 -r requirements.txt
 
