--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
+      with:
+        version: "latest"
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -23,28 +28,32 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        uv sync --frozen --dev
+    
+    - name: Lint with ruff
+      run: |
+        uv run ruff check .
     
     - name: Lint with flake8
       run: |
-        flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        uv run flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        uv run flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
     
     - name: Format check with black
       run: |
-        black --check src/ tests/
+        uv run black --check src/ tests/
     
     - name: Type check with mypy
       run: |
-        mypy src/ --ignore-missing-imports
+        uv run mypy src/ --ignore-missing-imports
     
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=geostats --cov-report=xml --cov-report=term-missing
+        uv run pytest tests/ --cov=geostats --cov-report=xml --cov-report=term-missing
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
+
 
