--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,20 @@ dependencies = [
     "click>=8.0.0",
 ]
 
+[dependency-groups]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=3.0.0",
+    "black>=22.0.0",
+    "flake8>=4.0.0",
+    "mypy>=0.950",
+    "ruff>=0.1.0",
+    "sphinx>=4.0.0",
+    "sphinx-rtd-theme>=1.0.0",
+    "build>=1.0.0",
+    "twine>=4.0.0",
+]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
@@ -41,8 +55,11 @@ dev = [
     "black>=22.0.0",
     "flake8>=4.0.0",
     "mypy>=0.950",
+    "ruff>=0.1.0",
     "sphinx>=4.0.0",
     "sphinx-rtd-theme>=1.0.0",
+    "build>=1.0.0",
+    "twine>=4.0.0",
 ]
 all = [
     "rasterio>=1.2.0",
@@ -94,8 +111,10 @@ disallow_untyped_defs = true
 [tool.ruff]
 line-length = 88
 target-version = "py312"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 ignore = ["E203", "E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
