--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# LEGACY FILE - This file is kept for reference only.
+# The project now uses uv and pyproject.toml as the single source of truth.
+# Use `uv sync` instead of `pip install -r requirements.txt`
+# See MIGRATION_UV.md for migration instructions.
+
 numpy>=1.20.0
 scipy>=1.7.0
 matplotlib>=3.3.0
