Update CI to also check ruff formatting
- Add ruff format check to CI
- Ruff config now ignores N806 (uppercase variables) and I001 (import sorting)
- This should reduce error count significantly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,10 @@ jobs:
     
     - name: Lint with ruff
       run: |
-        uv run ruff check .
+        uv run ruff check . --statistics
+    - name: Format check with ruff
+      run: |
+        uv run ruff format --check .
     
     - name: Lint with flake8
       run: |
