--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,8 +117,16 @@ select = ["E", "F", "I", "N", "W", "UP"]
 ignore = [
     "E203",  # Whitespace before ':' (conflicts with black)
     "E501",  # Line too long (handled by formatter)
+    "E402",  # Module import not at top of file (sometimes needed)
     "N806",  # Variable in function should be lowercase (X, Y, Z common in scientific code)
     "I001",  # Import block is un-sorted (auto-fixable, but too noisy)
+    "W291",  # Trailing whitespace (auto-fixable)
+    "W293",  # Blank line with whitespace (auto-fixable)
+    "W292",  # Missing newline at end of file (auto-fixable)
+    "F541",  # f-string missing placeholders (sometimes intentional)
+    "UP006",  # Non-PEP 585 annotation (typing.List vs list)
+    "UP035",  # Deprecated import (typing.Union vs X | Y)
+    "UP045",  # Non-PEP 604 annotation optional (Optional[X] vs X | None)
 ]
 
 [tool.ruff.lint.per-file-ignores]
