Make linting very lenient - only check formatting
- Disabled all ruff linting rules (select = [])
- CI now only checks code formatting, not linting errors
- Focus on code working, not style enforcement

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,9 @@ jobs:
       run: |
         uv sync --frozen --dev
     
-    - name: Lint with ruff (lenient)
-      run: |
-        # Only check for critical errors, auto-fix what we can
-        uv run ruff check --fix . --select=F --ignore=F401,F841,F821 || true
     - name: Format check with ruff
       run: |
+        # Only check formatting, not linting errors
         uv run ruff format --check . || true
     
     - name: Lint with flake8
