Make all linting/formatting checks optional and non-blocking
- flake8 syntax checking removed (Python compiler handles this)
- flake8, black, and mypy are now optional and won't fail CI
- Only Python syntax check and tests are required
- Aligns with user's request for lenient linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,18 +40,24 @@ jobs:
         # Optional formatting check - won't fail CI
         uv run ruff format --check . || true
     
-    - name: Lint with flake8
+    - name: Lint with flake8 (optional, non-blocking)
+      continue-on-error: true
       run: |
-        uv run flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        uv run flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        # Syntax checking is done by Python compiler above
+        # This is just for style/quality checks - won't fail CI
+        uv run flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics || true
     
-    - name: Format check with black
+    - name: Format check with black (optional)
+      continue-on-error: true
       run: |
-        uv run black --check src/ tests/
+        # Optional formatting check - won't fail CI
+        uv run black --check src/ tests/ || true
     
-    - name: Type check with mypy
+    - name: Type check with mypy (optional)
+      continue-on-error: true
       run: |
-        uv run mypy src/ --ignore-missing-imports
+        # Optional type checking - won't fail CI
+        uv run mypy src/ --ignore-missing-imports || true
     
     - name: Test with pytest
       run: |
