--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dev = [
     "ruff>=0.1.0",
     "sphinx>=4.0.0",
     "sphinx-rtd-theme>=1.0.0",
+    "myst-parser>=2.0.0",
     "build>=1.0.0",
     "twine>=4.0.0",
 ]
@@ -58,6 +59,7 @@ dev = [
     "ruff>=0.1.0",
     "sphinx>=4.0.0",
     "sphinx-rtd-theme>=1.0.0",
+    "myst-parser>=2.0.0",
     "build>=1.0.0",
     "twine>=4.0.0",
 ]
